Create default EnchantmentData map
Signed-off-by: GoldenStack <goldenfire64yt@gmail.com>